gl31-master/src/test/deca/context/valid/complet/meth_asm.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 19/01/2021
class Test{
    protected int a;

    void methTest(int a, float b) asm ("string");
    void meth(int a){}
}